# copycat

./: .gitignore  Cargo.toml  README.md
configuration/: config.toml  ports.toml
details/: E001.md
frontend/: detail.htmpl  index.htmpl  json.htmpl  log.htmpl  other.htmpl  yaml.htmpl
scripts/bukkit/: ambiguous_plugin_name.rhai
scripts/forge/: java_too_modern.rhai
scripts/global/: not_meowhost.rhai
src/: configuration.rs  lib.rs  main.rs  middleware.rs  redis.rs
src/paste/: analyzer.rs  mod.rs
src/routes/: mod.rs
src/routes/api/: all.rs  leaks.rs  mod.rs  plugins.rs  ports.rs  upload.rs
src/routes/api/frontend/: detail.rs  mod.rs  paste.rs
src/routes/get/: mod.rs  raw.rs
src/routes/post/: mod.rs  upload.rs
