[package]
name = "copycat"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "copycat"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["tracing", "multipart"] }
config = "0.14.1"
fred = "9.4.0"
mclog = { git = "https://github.com/caukub/mclog.git" }
html-escape = "0.2.13"
rand = "0.8.5"
regex = "1.11.1"
rhai = { version = "1.18.0", features = ["only_i32"] }
semver = "1.0.23"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "fs", "net"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["io"] }
toml = "0.8.19"
tower-http = { version = "0.6.1", features = ["cors", "trace", "fs", "compression-full", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.31"
